--- a/TrabajoAIS/AndroidManifest.xml
+++ b/TrabajoAIS/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/UcoRascaTheme" >
         <activity
             android:name="com.example.trabajoais.MainActivity"
             android:label="@string/app_name"
